fixed background image not displaying on mobile due to z-index. Made floating contact button less transparent. Made remove meta tag function in formatting class

--- a/assets/sass/components/content/_background.scss
+++ b/assets/sass/components/content/_background.scss
@@ -4,7 +4,7 @@
   background-position: center;
   width: 100%;
   position: fixed;
-  z-index: -1;
+  z-index: -2;
   top: 0;
   height: 100vh;
   object-fit: cover;
