--- a/assets/sass/components/header/_video-bg.scss
+++ b/assets/sass/components/header/_video-bg.scss
@@ -12,7 +12,7 @@
   //opacity: .8;
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
-  z-index: -99;
+  z-index: -1;
 
 
 }
