--- a/assets/sass/components/sidebars/slide-out-sidebar/_slide-out-sidebar.scss
+++ b/assets/sass/components/sidebars/slide-out-sidebar/_slide-out-sidebar.scss
@@ -59,7 +59,7 @@
     width: 100%;
 
     @include media-query('med') {
-      width: unset;
+      width: 100%;
     }
   }
 
