--- a/assets/sass/components/slick-slider/_arrows.scss
+++ b/assets/sass/components/slick-slider/_arrows.scss
@@ -9,10 +9,6 @@
   height: 100%;
   align-items: center;
 
-  @include media-query('xlg') {
-    width: 20%;
-  }
-
   &:hover {
     cursor: pointer;
     color: darken($white, 60%);
